# ipa-python-kit

./: .gitignore  README.md  main.py  main.spec  pyproject.toml  pytest.ini  ruff.toml
src/biz/: __init__.py
src/ipa/cli/: __init__.py  model.py  proxy.py  seaweedfs.py
src/ipa/ctx/: __init__.py
src/ipa/data_type/: __init__.py  base.py  container.py  point.py  process.py  spatial.py  unitable.py
src/ipa/datetime/: __init__.py  core.py
src/ipa/decorator/: __init__.py  exception.py
src/ipa/func/: __init__.py  _async.py  _lambda.py  _object.py  num.py  shortcut.py
src/ipa/i18n/: __init__.py
src/ipa/io/: buffer.py
src/ipa/logging/: util.py
src/ipa/logging/model/: dict_config.py
src/ipa/math/: __init__.py  core.py
src/ipa/network/: __init__.py
src/ipa/orm/base/: mixin.py
src/ipa/pkg/: __init__.py  hot_reload.py
src/ipa/system/: __init__.py  disk.py  process.py
src/ipa/visualization/: __init__.py  _networkx.py
src/ipa/websocket/core/: __init__.py
tests/: cli_test.py  ctx_test.py  data_type_test.py  datetime_test.py  decorator_test.py  echarts_test.py  fastapi_test.py  i18n_test.py  io_test.py  logger_test.py  math_test.py  network_test.py  point_test.py  pydantic_test.py  python_test.py  system_test.py  vis_test.py  websocket_test.py
tests/subprocess_test/: child.py  pipe_test.py
